fix(slideout): fixes right position
Adds left: 0, right: 0 to the body when slideout is opened

--- a/index.css
+++ b/index.css
@@ -28,8 +28,13 @@
 .slideout-open,
 .slideout-open body,
 .slideout-open .slideout-panel {
-  position: fixed;
   overflow: hidden;
+}
+
+.slideout-open body {
+  position: fixed;
+  left: 0;
+  right: 0;
 }
 
 .slideout-open .slideout-menu {
